# synfig

synfig-core/src/modules/mod_svg/: Makefile.am  filter.cpp  filter.h  filterblock.cpp  filterblock.h  svg_parser.cpp  svg_parser.h
synfig-core/src/modules/mod_svg/filters/: filter_blur.cpp  filter_blur.h
